[package]
name = "dht-spider"
version = "1.5.0"
edition = "2021"
authors = ["AdySec <admin@adysec.com>"]

[dependencies]
tokio = { version = "1", features = ["net", "rt-multi-thread", "macros", "time", "sync", "io-util"] }
rand = "0.8"
sha1 = "0.10"
thiserror = "1"
dashmap = "5"
hex = "0.4"
itoa = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }


